<resources>
    <string name="app_name">Kotlin Messenger</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_messenger">Messenger</string>
    <string name="title_activity_chat">Chat</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">I already have an account.</string>
    <string name="login">Login</string>
    <string name="create_account">Do not have an account? Create an account!</string>
    <string name="loading">Loading…</string>
    <string name="select_image">Select Image</string>
    <string name="select_user">Select User</string>

    <string name="login_error">Please fill out email or password.</string>

    <string name="nav_menu_sign_out">SIGN OUT</string>
    <string name="nav_menu_new_message">NEW MESSAGE</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>

    <string name="exit">Exit</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
