<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateAccountActivity" android:background="@android:color/holo_green_light">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edt_name" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/user_name"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="120dp" android:autofillHints="text"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/edt_email"
            app:layout_constraintTop_toBottomOf="@+id/edt_name" app:layout_constraintStart_toStartOf="@+id/edt_name"
            app:layout_constraintEnd_toEndOf="@+id/edt_name"
            android:layout_marginTop="8dp" android:hint="@string/email" android:autofillHints="text"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edt_password"
            app:layout_constraintStart_toStartOf="@+id/edt_email" app:layout_constraintEnd_toEndOf="@+id/edt_email"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" android:layout_marginTop="8dp"
            android:hint="@string/password" android:importantForAutofill="no"/>
    <Button
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register" app:layout_constraintStart_toStartOf="@+id/edt_password"
            app:layout_constraintEnd_toEndOf="@+id/edt_password"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/edt_password"/>
    <TextView
            android:text="@string/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvw_alredy_have_account" app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="@+id/btn_register" android:textColor="@android:color/white"
            android:textSize="16sp" android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
