<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" android:background="@android:color/holo_green_light">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edt_email"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/email" android:layout_marginTop="120dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edt_password"
            app:layout_constraintStart_toStartOf="@+id/edt_email" app:layout_constraintEnd_toEndOf="@+id/edt_email"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" android:layout_marginTop="8dp"
            android:hint="@string/password"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/edt_password"
            app:layout_constraintStart_toStartOf="@+id/edt_password"
            app:layout_constraintEnd_toEndOf="@+id/edt_password" android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvw_create_account" app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_login" app:layout_constraintTop_toBottomOf="@+id/btn_login"
            android:layout_marginTop="8dp" android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textColor="@android:color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>
