<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.registerlogin.RegisterActivity" android:background="@android:color/holo_green_light"
        android:id="@+id/constraintLayout">

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/progressBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/scrollView"
            app:layout_constraintStart_toStartOf="@+id/scrollView" app:layout_constraintEnd_toEndOf="@+id/scrollView"
            android:layout_marginEnd="112dp" android:layout_marginStart="112dp" android:visibility="gone"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/scrollView">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/btn_image"
                    android:background="@drawable/rounded_button"
                    android:text="@string/select_image" android:textColor="@android:color/white"
                    android:layout_marginTop="64dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <de.hdodenhof.circleimageview.CircleImageView android:layout_width="150dp"
                                                          android:layout_height="150dp"
                                                          android:id="@+id/img_circle_image"
                                                          app:layout_constraintTop_toTopOf="@+id/btn_image"
                                                          app:layout_constraintEnd_toEndOf="@+id/btn_image"
                                                          app:layout_constraintStart_toStartOf="@+id/btn_image"
                                                          app:layout_constraintBottom_toBottomOf="@+id/btn_image"
                                                          tools:src="@drawable/ic_photo"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/img_circle_image"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp" android:id="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name" android:id="@+id/edt_name" android:singleLine="true"
                        android:textColor="@android:color/white" android:inputType="textPersonName|textCapWords"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginTop="8dp"
                    android:id="@+id/textInputLayout1">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" android:id="@+id/edt_email" android:singleLine="true"
                        android:textColor="@android:color/white" android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="@+id/textInputLayout1"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout1"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
                    android:id="@+id/textInputLayout2" android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password" android:id="@+id/edt_password" android:singleLine="true"
                        android:textColor="@android:color/white" android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                    android:text="@string/register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_login"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                    android:background="@android:color/holo_green_dark" android:textColor="@android:color/white"/>
            <TextView
                    android:text="@string/already_have_an_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvw_create_account"
                    app:layout_constraintTop_toBottomOf="@+id/btn_login"
                    app:layout_constraintStart_toStartOf="@+id/btn_login"
                    app:layout_constraintEnd_toEndOf="@+id/btn_login" android:layout_marginTop="16dp"
                    android:textAlignment="center" android:textColor="@android:color/white" android:textSize="14sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
